<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_video_intent">VideoIntent</string>

    <string name="title_play_video">Play</string>
    <string name="local_video_addr">/mnt/sdcard/Test_Movie.m4v</string>
    <string name="net_stream_addr1">rtmp://stream.jrntv.com/live/jrxw_sd</string>
    <string name="net_stream_addr2">rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov</string>
    <string name="net_stream_in">User enter stream address</string>
    <string name="url_hint_message">Enter a video URI</string>
</resources>
