<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my"
    android:orientation="vertical">
    <!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:id="@+id/video_url"
            android:hint="Enter a video url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/playVideoView"
            android:text="@string/title_play_edit_video"
            android:onClick="playVideoView"
            />
    </LinearLayout>
    -->



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_url">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/local_video"
                android:checked="true"
                android:text="@string/local_video_addr"/>

            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/net_stream1"
                android:checked="false"
                android:text="@string/net_stream_addr1"/>

            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/net_stream2"
                android:checked="false"
                android:text="@string/net_stream_addr2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/net_stream_in"
                android:checked="false"
                android:text="@string/net_stream_in"/>
        </RadioGroup>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/video_url"
            android:hint="@string/url_hint_message"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/bt_play_chk"
            android:text="@string/title_play_video"
            android:onClick="playVideoView"/>
    </LinearLayout>

    <!-- videoview -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <io.vov.vitamio.widget.VideoView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/videoView"
            />
    </LinearLayout>

</LinearLayout>

